--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;800;900&display=swap');
+
 :root {
     --color-purple: #3E2669;
     --color-violet: #5C4E9A;
     --color-pink: #E71F76;
 }
 
+* {
+    font-family: 'Outfit';
+}
+
 body {
     background-color: #F5F5F5;
+}
+
+button:focus {
+    outline: none;
+}
+
+a:focus {
+    outline: none;
 }
 
 ::-webkit-scrollbar {
